
plugins {
	id 'java-library'
	id 'jacoco'
}


// In this section you declare where to find the dependencies of your project
repositories {
	jcenter()
}

java {
	sourceCompatibility = JavaVersion.VERSION_11
	targetCompatibility = JavaVersion.VERSION_11
}

// dependencies version:
def springBootVersion = '2.2.2.RELEASE'

def gsonVersion = '2.8.6'

def jdomVersion = '2.0.6'
def jaxenVersion = '1.2.0'

def commonsIoVersion = '2.6'
def commonsNetVersion = '3.6'
def commonsLangVersion = '3.9'
def commonsValidatorVersion = '1.6'
def commonsText = '1.8';

def imgscalrVersion = '4.2'
def sshVersion = '1.6.1'
def aspectjVersion = '1.9.5'

// test dependencies version:
def mockFtpServerVersion = '2.7.1'
def sshDeamonVersion = '2.3.0'

dependencies {

	// spring boot dependencies
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
	
	// json dependencies
	implementation group: 'com.google.code.gson', name: 'gson', version: gsonVersion
	
	// xml/xpath dependencies
	implementation group: 'org.jdom', name: 'jdom2', version: jdomVersion
	implementation group: 'jaxen', name: 'jaxen', version: jaxenVersion
	
	// miscellaneous
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: commonsLangVersion
	implementation group: 'commons-io', name: 'commons-io', version: commonsIoVersion
	implementation group: 'commons-net', name: 'commons-net', version: commonsNetVersion
	implementation group: 'commons-validator', name: 'commons-validator', version: commonsValidatorVersion
	implementation group: 'org.apache.commons', name: 'commons-text', version: commonsText

	// image scaling
	implementation group: 'org.imgscalr', name: 'imgscalr-lib', version: imgscalrVersion
	
	// ssh utility
	implementation group: 'com.jcabi', name: 'jcabi-ssh', version: sshVersion
	implementation group: 'org.aspectj', name: 'aspectjweaver', version: aspectjVersion
	
	// test dependencies
	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion
	testImplementation group: 'org.mockftpserver', name: 'MockFtpServer', version: mockFtpServerVersion
	implementation group: 'org.apache.sshd', name: 'sshd-core', version: sshDeamonVersion
}

test {
    jacoco {
      destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
    }
}
